--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PapaDeere/burger.git"
+    "url": "https://github.com/PapaDeere/burger.git"
   },
   "author": "papa",
   "license": "ISC",
