--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "version": "1.0.0",
   "description": "eat da burger",
   "main": "index.js",
-
+   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "scripts": {
+    "start": "node server.js"
+   }
+},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PapaDeere/burger.git"
+  },
   },
   "repository": {
     "type": "git",
@@ -22,6 +32,3 @@
     "method-override": "^2.3.10",
     "mysql": "^2.15.0"
   },
-  "scripts": {
-    "start": "node server.js"
-}
