first deploy to heroku after adding in jawsdb connection

--- a/package.json
+++ b/package.json
@@ -4,31 +4,24 @@
   "description": "eat da burger",
   "main": "index.js",
    "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-   }
-},
+   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PapaDeere/burger.git"
-  },
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/PapaDeere/burger.git"
+    "url": "https://github.com/RyanBryce/burger.git"
   },
   "author": "papa",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/PapaDeere/burger/issues"
+    "url": "https://github.com/RyanBryce/burger/issues"
   },
-  "homepage": "https://github.com/PapaDeere/burger#readme",
+  "homepage": "https://github.com/RyanBryce/burger#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.10",
     "mysql": "^2.15.0"
-  },
+  }
+}
